--- a/index.html
+++ b/index.html
@@ -1,80 +1,17 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Personal Website</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 1em 0;
-        }
-
-        section {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-        }
-
-        h1, h2 {
-            color: #333;
-        }
-
-        p {
-            line-height: 1.6;
-            color: #666;
-        }
-
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #333;
-            color: #fff;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <title>Index</title>
+    <link rel="icon" type="image/x-icon" href="img/icon.png">
 </head>
-<body>
+<body style="background-color:#FFFAFA;">
+    <div id="mainTexDiv">
+        <h1 id="mainText">Anand Srinivasan</h1>
+    </div>
 
-    <header>
-        <h1>Your Name</h1>
-        <p>Web Developer</p>
-    </header>
-
-    <section>
-        <h2>About Me</h2>
-        <p>
-            Welcome to my personal website! I am a passionate web developer with a love for creating
-            beautiful and functional websites. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            ...
-        </p>
-    </section>
-
-    <section>
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML5</li>
-            <li>CSS3</li>
-            <li>JavaScript</li>
-            <!-- Add more skills as needed -->
-        </ul>
-    </section>
-
-    <footer>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
-    </footer>
-
+    
 </body>
 </html>
-
