--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="headshot_div">
-                <img src="imgs/headshot.png" alt="Headshot" class="headshot">
+                <img src="imgs/headshot2.jpg" alt="Headshot" class="headshot">
             </div>
             
         </div>
