post grad update

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="name_and_info">
                 <h1>Anand Srinivasan</h1>
                 <div class="horizontal_line"></div>
-                <h3>anand.srinivasan [at] yale.edu</h3>
+                <h3>anandsrini3 [at] gmail.com</h3>
                 <div class="icons">
                     <a href="https://github.com/SrinivasanAnand" target="_blank">
                         <img src="imgs/gh_icon.png" alt="Icon 1" class="gh-icon">
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="headshot_div">
-                <img src="imgs/headshot2.jpg" alt="Headshot" class="headshot">
+                <img src="imgs/headshot.png" alt="Headshot" class="headshot">
             </div>
             
         </div>
@@ -40,17 +40,16 @@
     <main>
         <div id="About" class="About">
             <h2>About</h2>
-            <p>I’m a senior at Yale majoring in computer science.
-                I’m broadly interested in machine learning and its applications in healthcare.
-                I’m fortunate to be working in <a href="https://aneja-lab.org/" class="link">Sanjay Aneja’s lab</a> at the Yale School of Medicine
-                and completing a senior thesis in the Yale department of computer science advised
-                by <a href="https://dannyrakita.net/" class="link">Daniel Rakita</a>.</p>
+            <p>I’m a recent college graduate broadly interested in machine learning
+                and its applications in healthcare.
+                I’m fortunate to be working in <a href="https://aneja-lab.org/" class="link">Sanjay Aneja’s lab</a>
+                at the Yale School of Medicine.</p>
         </div>
         <div id="Projects" class="Projects">
             <h2 class="project-header">What I've been working on recently . . . </h2>
             <p class="project_text">[1] Evaluating the Adversarial Robustness of Capsule Networks for Medical Classification Tasks <br>
-                [2] Graph Neural Network Learning on the Structural Connectome (under review) <br>
-                [3] 3D Scene Reconstruction for IMA Division Robotic Surgery <a href="senior-thesis.pdf" class="link">[working draft]</a></p>
+                [2] Graph Neural Network Learning on the Structural Connectome [<a href="https://www.mdpi.com/2379-139X/11/2/14" class="link">paper</a>]<br>
+                [3] 3D Scene Reconstruction for IMA Division Robotic Surgery [<a href="CPSC_490_Senior_Thesis.pdf" class="link">pdf</a>]</p>
         </div>
         <div class="not-init-visible">
             <div id="Teaching" class="Teaching">
